--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "",
+    "build": "webpack --config webpack.prod.js",
     "start": "node ./scripts/dev.js"
   },
   "devDependencies": {
