--- a/package.json
+++ b/package.json
@@ -14,14 +14,22 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
     "chalk": "^1.1.3",
+    "clean-webpack-plugin": "^0.1.10",
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
+    "purifycss-webpack-plugin": "^2.0.3",
     "react-hot-loader": "^3.0.0-beta.3",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
   },
   "author": "Leonardo Hahn",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "phoenix": "^1.2.0",
     "react": "^15.3.1",
     "react-bootstrap": "^0.30.3",
