--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
-    "start": "cross-env NODE_ENV=development node ./scripts/dev.js"
+    "start": "cross-env NODE_ENV=development node ./scripts/dev.js",
+    "build:test": "node ./scripts/test-build.js"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
@@ -34,6 +35,7 @@
   "dependencies": {
     "babel-polyfill": "^6.13.0",
     "bootstrap": "^3.3.7",
+    "less": "^2.7.1",
     "phoenix": "^1.2.0",
     "react": "^15.3.1",
     "react-bootstrap": "^0.30.3",
@@ -41,6 +43,7 @@
     "react-redux": "^4.4.5",
     "react-redux-toastr": "^3.7.0",
     "react-router": "^2.7.0",
+    "react-router-bootstrap": "^0.23.1",
     "redux": "^3.6.0",
     "redux-saga": "^0.11.1"
   }
